# tag_editor

./: Cargo.toml  LICENSE  settings.json
src/: app.rs  config.rs  file_tree.rs  image_viewer.rs  main.rs  slideshow.rs  tag_manager.rs
