[package]
name = "tag_editor"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0"
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image", "file"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
little_exif = "0.6.21"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trash = "5.2.5"
walkdir = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
